--- a/views/lobby.html
+++ b/views/lobby.html
@@ -50,8 +50,9 @@
                     <div id="message_box">
                         <ul id="messages"></ul>
                     </div>
-                    <form action="">
-                        <input id="m" autocomplete="off" /><button>Send</button>
+                    <form id="message_input_form" action="">
+                        <input id="message_input_box" autocomplete="off" />
+                        <button>Send</button>
                     </form>
                     <br />
                     <a href ="/duel/" target ="_blank"> Duel Room </a>
@@ -82,13 +83,15 @@
 
                             //var socket = io();
                             $('form').submit(function () {
-                                socket.emit('chat message', $('#m').val());
-                                $('#m').val('');
+                                socket.emit('chat message', $('#message_input_box').val());
+                                $('#message_input_box').val('');
                                 return false;
                             });
                             socket.on('chat message', function (data) {
                                 $('#messages').append($('<li>').html( "<b>"+ data.user + ": </b>"+data.msg));
                                 //changed it so that it appears in a single line, now the alternating li color works - will need alignment later
+                                //crap, the messages are actually sent as html now so html tags in messages work...
+                                
                                 var box = document.getElementById("message_box");
                                 box.scrollTop = box.scrollHeight;
                             });
