--- a/views/index.html
+++ b/views/index.html
@@ -49,10 +49,12 @@
                     <!-- insert the page content here -->
                     <h1>Welcome to DM App</h1>
                     Enter name:
-                    <form action="lobby/">
-                        <input type="text" name="user" value="Name">
+                     <fieldset>
+                    <form action="/" method="post">
+                        <input type="text" name="inputname" placeholder="Name" required>
                         <input type="submit" value="Join">
                     </form>
+                    </fieldset>
                 </div>
             </div>
             <div id="content_footer"></div>
