--- a/views/lobby.html
+++ b/views/lobby.html
@@ -67,7 +67,7 @@
                         // on connection to server, ask for user's name with an anonymous callback
                         socket.on('connect', function(){
                             // call the server-side function 'adduser' and send one parameter (value of prompt)
-                            socket.emit('adduser', prompt("What's your name?"));
+                            socket.emit('adduser', prompt("If you have already entered a name in home page, ignore this. if not, please enter a Username"));
                         });
 
                         // listener, whenever the server emits 'updateusers', this updates the username list
