--- a/views/index.html
+++ b/views/index.html
@@ -49,12 +49,10 @@
                     <!-- insert the page content here -->
                     <h1>Welcome to DM App</h1>
                     Enter name:
-                     <fieldset>
                     <form action="/" method="post">
                         <input type="text" name="inputname" placeholder="Name" required>
-                        <input type="submit" value="Join">
+                        <input type="submit" value="Join Lobby">
                     </form>
-                    </fieldset>
                 </div>
             </div>
             <div id="content_footer"></div>
